--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "puppeteer": "^21.6.1"
+   "puppeteer": "^21.6.1",
+    "pdfkit": "^0.13.0"
   },
   "engines": {
     "node": ">=18.0.0"
